--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -123,12 +123,7 @@
       <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>jakarta.jms</groupId>
-      <artifactId>jakarta.jms-api</artifactId>
-      <version>${version.jakarta.jms.jakarta-jms-api}</version>
-      <scope>compile</scope>
-    </dependency>
+
     <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
@@ -140,6 +135,13 @@
       <artifactId>jakarta.annotation-api</artifactId>
       <version>${version.jakarta.annotation.jakarta-annotation-api}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.jms</groupId>
+      <artifactId>jakarta.jms-api</artifactId>
+      <version>${version.jakarta.jms.jakarta-jms-api}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
@@ -327,6 +329,7 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <phase>package</phase>
           </execution>
         </executions>
       </plugin>
@@ -404,6 +407,14 @@
                     -exclude com.arjuna.orbportability.internal -exclude com.arjuna.ats.jbossatx
                     -exclude com.arjuna.mw.wstx -exclude org.jboss.jbossts.txbridge
                     -exclude org.jboss.jbossts.xts -exclude org.jboss.jbossts.xts11</additionalparam>
+
+                  <additionalDependencies>
+                    <additionalDependency>
+                      <groupId>jakarta.annotation</groupId>
+                      <artifactId>jakarta.annotation-api</artifactId>
+                      <version>${version.jakarta.annotation.jakarta-annotation-api}</version>
+                    </additionalDependency>
+                  </additionalDependencies>
                   <groups>
                     <group>
                       <title>Core</title>
@@ -445,23 +456,23 @@
               </execution>
             </executions>
           </plugin>
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>pack-javadoc</id>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <phase>package</phase>
-                <configuration>
-                  <target>
-                    <jar basedir="${project.build.directory}/site/apidocs/" destfile="${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar"></jar>
-                  </target>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
+          <!--           <plugin> -->
+          <!--             <artifactId>maven-antrun-plugin</artifactId> -->
+          <!--             <executions> -->
+          <!--               <execution> -->
+          <!--                 <id>pack-javadoc</id> -->
+          <!--                 <goals> -->
+          <!--                   <goal>run</goal> -->
+          <!--                 </goals> -->
+          <!--                 <phase>package</phase> -->
+          <!--                 <configuration> -->
+          <!--                   <target> -->
+          <!--                     <jar basedir="${project.build.directory}/site/apidocs/" destfile="${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar"></jar> -->
+          <!--                   </target> -->
+          <!--                 </configuration> -->
+          <!--               </execution> -->
+          <!--             </executions> -->
+          <!--           </plugin> -->
         </plugins>
       </build>
     </profile>
