--- a/XTS/WSAS/xts-test-servlet/pom.xml
+++ b/XTS/WSAS/xts-test-servlet/pom.xml
@@ -35,7 +35,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.arjunacore</groupId>
-      <artifactId>arjunacore</artifactId>
+      <artifactId>arjuna</artifactId>
     </dependency>
     <!-- XTS: -->
     <dependency>
