--- a/XTS/WSAS/pom.xml
+++ b/XTS/WSAS/pom.xml
@@ -19,7 +19,7 @@
   <dependencies>
     <dependency>
       <groupId>org.jboss.narayana.arjunacore</groupId>
-      <artifactId>arjunacore</artifactId>
+      <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
