--- a/XTS/WSCF/pom.xml
+++ b/XTS/WSCF/pom.xml
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.arjunacore</groupId>
-      <artifactId>arjunacore</artifactId>
+      <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
