--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -3,7 +3,6 @@
    Copyright The Narayana Authors
    SPDX short identifier: Apache-2.0
  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -139,6 +138,16 @@
     <dependency>
       <groupId>com.ibm.db2.jcc</groupId>
       <artifactId>db2jcc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>jboss.profiler.jvmti</groupId>
+      <artifactId>jboss-profiler-jvmti</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
