--- a/XTS/localjunit/WSTX11-interop/pom.xml
+++ b/XTS/localjunit/WSTX11-interop/pom.xml
@@ -47,6 +47,14 @@
 
           </systemProperties>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
