--- a/ArjunaCore/arjuna/services/pom.xml
+++ b/ArjunaCore/arjuna/services/pom.xml
@@ -18,6 +18,16 @@
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>${sourceDirACS}</sourceDirectory>
+    <plugins>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
   <profile>
