--- a/XTS/WSAS/pom.xml
+++ b/XTS/WSAS/pom.xml
@@ -33,6 +33,16 @@
     </dependency>
   </dependencies>
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <inherited>false</inherited>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+    </plugins>
     <sourceDirectory>classes</sourceDirectory>
   </build>
 </project>
