--- a/XTS/sar/pom.xml
+++ b/XTS/sar/pom.xml
@@ -85,6 +85,16 @@
         <directory>resources</directory>
       </resource>
     </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <inherited>false</inherited>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+    </plugins>
     <sourceDirectory>src</sourceDirectory>
   </build>
 </project>
