--- a/rts/lra/coordinator-war/pom.xml
+++ b/rts/lra/coordinator-war/pom.xml
@@ -25,6 +25,16 @@
 
   <build>
     <finalName>lra-coordinator</finalName>
+    <plugins>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <profiles>
