--- a/rts/lra/test/basic/pom.xml
+++ b/rts/lra/test/basic/pom.xml
@@ -15,6 +15,19 @@
   <name>LRA tests: Basic</name>
   <description>LRA basic integration tests</description>
 
+  <build>
+    <plugins>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <configuration>
+          <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <properties>
     <!-- This configuration allows WildFly to be ran with various extra subsystems, including an OpenAPI subsystem -->
     <config.to.replace>standalone-microprofile.xml</config.to.replace>
