--- a/common/pom.xml
+++ b/common/pom.xml
@@ -48,12 +48,6 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>org.jboss.logging</groupId>
-      <artifactId>jboss-logging-processor</artifactId>
-      <scope>provided</scope>
-      <optional>true</optional>
-    </dependency>
     <!-- START TEST -->
     <dependency>
       <groupId>junit</groupId>
@@ -82,6 +76,18 @@
       </activation>
       <build>
         <plugins>
+          <!-- Adding annotationProcessor to add generated logger implementations to compiler -->
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <annotationProcessorPaths>
+                <annotationProcessorPath>
+                  <groupId>org.jboss.logging</groupId>
+                  <artifactId>jboss-logging-processor</artifactId>
+                </annotationProcessorPath>
+              </annotationProcessorPaths>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
