--- a/rts/at/util/pom.xml
+++ b/rts/at/util/pom.xml
@@ -62,7 +62,7 @@
     <!-- jboss logging -->
     <dependency>
       <groupId>org.jboss.logging</groupId>
-      <artifactId>jboss-logging-processor</artifactId>
+      <artifactId>jboss-logging-annotations</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -85,6 +85,19 @@
           <forceCreation>true</forceCreation>
           <includePom>true</includePom>
           <defaultManifestFile></defaultManifestFile>
+        </configuration>
+      </plugin>
+      <!-- Adding annotationProcessor to add generated logger implementations to compiler -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.jboss.logging</groupId>
+              <artifactId>jboss-logging-processor</artifactId>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
     </plugins>
